@@ -40,7 +40,6 @@ import java.util.Map;
 import java.util.Objects;
 import java.util.concurrent.TimeoutException;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.zip.GZIPOutputStream;
 
@@ -114,7 +113,7 @@ public class HttpBidderRequester {
                 .map(httpCallFuture -> httpCallFuture
                         .map(httpCall -> bidderErrorNotifier.processTimeout(httpCall, bidder))
                         .map(httpCall -> processHttpCall(bidder, bidRequest, resultBuilder, httpCall)))
-                .collect(Collectors.toList());
+                .toList();
 
         return CompositeFuture.any(
                         CompositeFuture.join(new ArrayList<>(httpRequestFutures)),
@@ -131,7 +130,7 @@ public class HttpBidderRequester {
                         .headers(requestEnricher.enrichHeaders(
                                 bidderName, httpRequest.getHeaders(), requestHeaders, bidRequest))
                         .build())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private <T> boolean isStoredResponse(List<HttpRequest<T>> httpRequests, String storedResponse, String bidder) {
@@ -140,9 +139,10 @@ public class HttpBidderRequester {
         }
 
         if (httpRequests.size() > 1) {
-            logger.warn("More than one request was created for stored response, when only single stored response "
-                    + "per bidder is supported for the moment. Request to real {0} bidder "
-                    + "will be performed .", bidder);
+            logger.warn("""
+                            More than one request was created for stored response, when only single stored response \
+                            per bidder is supported for the moment. Request to real {0} bidder will be performed.""",
+                    bidder);
             return false;
         }
 
@@ -203,7 +203,8 @@ public class HttpBidderRequester {
     }
 
     private static byte[] gzip(byte[] value) {
-        try (ByteArrayOutputStream obj = new ByteArrayOutputStream();
+        try (
+                ByteArrayOutputStream obj = new ByteArrayOutputStream();
                 GZIPOutputStream gzip = new GZIPOutputStream(obj)) {
 
             gzip.write(value);
@@ -211,7 +212,7 @@ public class HttpBidderRequester {
 
             return obj.toByteArray();
         } catch (IOException e) {
-            throw new PreBidException(String.format("Failed to compress request : %s", e.getMessage()));
+            throw new PreBidException("Failed to compress request : " + e.getMessage());
         }
     }
 
@@ -358,7 +359,7 @@ public class HttpBidderRequester {
 
             // Capture debugging info from the requests
             final List<ExtHttpCall> extHttpCalls = debugEnabled
-                    ? httpCalls.stream().map(this::toExt).collect(Collectors.toList())
+                    ? httpCalls.stream().map(this::toExt).toList()
                     : Collections.emptyList();
 
             final List<BidderError> errors = combineErrors(previousErrors, httpCalls, errorsRecorded);
@@ -398,7 +399,7 @@ public class HttpBidderRequester {
                             responseErrors.stream(),
                             calls.stream().map(BidderCall::getError).filter(Objects::nonNull))
                     .flatMap(Function.identity())
-                    .collect(Collectors.toList());
+                    .toList();
         }
     }
 
