@@ -9,8 +9,8 @@ import io.vertx.core.http.HttpMethod;
 import org.apache.commons.collections4.CollectionUtils;
 import org.prebid.server.bidder.Bidder;
 import org.prebid.server.bidder.model.BidderBid;
-import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.BidderCall;
+import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.Result;
 import org.prebid.server.exception.PreBidException;
@@ -25,7 +25,6 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 public class MobilefuseBidder implements Bidder<BidRequest> {
 
@@ -105,10 +104,9 @@ public class MobilefuseBidder implements Bidder<BidRequest> {
     }
 
     private String makeUrl(ExtImpMobilefuse extImpMobilefuse) {
-        final String baseUrl = String.format("%s%s", endpointUrl,
-                Objects.toString(extImpMobilefuse.getPublisherId(), "0"));
+        final String baseUrl = endpointUrl + Objects.toString(extImpMobilefuse.getPublisherId(), "0");
         return "ext".equals(extImpMobilefuse.getTagidSrc())
-                ? String.format("%s%s", baseUrl, "&tagid_src=ext")
+                ? baseUrl + "&tagid_src=ext"
                 : baseUrl;
     }
 
@@ -136,7 +134,7 @@ public class MobilefuseBidder implements Bidder<BidRequest> {
                 .filter(Objects::nonNull)
                 .flatMap(Collection::stream)
                 .map(bid -> BidderBid.of(bid, getBidType(bidRequest.getImp()), bidResponse.getCur()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     protected BidType getBidType(List<Imp> imps) {
