@@ -157,8 +157,8 @@ public class BasicPriceFloorEnforcer implements PriceFloorEnforcer {
 
             if (isPriceBelowFloor(price, floor)) {
                 warnings.add(BidderError.rejectedIpf(
-                        String.format("Bid with id '%s' was rejected by floor enforcement: "
-                                + "price %s is below the floor %s", bid.getId(), price, floor)));
+                        "Bid with id '%s' was rejected by floor enforcement: price %s is below the floor %s"
+                                .formatted(bid.getId(), price, floor)));
 
                 updatedBidderBids.remove(bidderBid);
             }
@@ -204,15 +204,12 @@ public class BasicPriceFloorEnforcer implements PriceFloorEnforcer {
             final String bidRequestCurrency = resolveBidRequestCurrency(bidRequest);
             return convertCurrency(imp.getBidfloor(), bidRequest, imp.getBidfloorcur(), bidRequestCurrency);
         } catch (PreBidException e) {
-            final String logMessage =
-                    String.format("Price floors enforcement failed for request id: %s, reason: %s",
-                            bidRequest.getId(),
-                            e.getMessage());
+            final String logMessage = "Price floors enforcement failed for request id: %s, reason: %s"
+                    .formatted(bidRequest.getId(), e.getMessage());
             logger.debug(logMessage);
             conditionalLogger.error(logMessage, 0.01d);
             metrics.updatePriceFloorGeneralAlertsMetric(MetricName.err);
-            errors.add(BidderError.badServerResponse(
-                    String.format("Price floors enforcement failed: %s", e.getMessage())));
+            errors.add(BidderError.badServerResponse("Price floors enforcement failed: " + e.getMessage()));
 
             return null;
         }
@@ -263,8 +260,7 @@ public class BasicPriceFloorEnforcer implements PriceFloorEnforcer {
                 .filter(imp -> Objects.equals(impId, imp.getId()))
                 .findFirst()
                 // Should never happen, see ResponseBidValidator usage.
-                .orElseThrow(() -> new PreBidException(
-                        String.format("Bid with impId %s doesn't have matched imp", impId)));
+                .orElseThrow(() -> new PreBidException("Bid with impId %s doesn't have matched imp".formatted(impId)));
     }
 
     private static boolean isPriceBelowFloor(BigDecimal price, BigDecimal bidFloor) {
