@@ -16,8 +16,8 @@ import org.junit.Before;
 import org.junit.Test;
 import org.prebid.server.VertxTest;
 import org.prebid.server.bidder.model.BidderBid;
-import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.BidderCall;
+import org.prebid.server.bidder.model.BidderError;
 import org.prebid.server.bidder.model.HttpRequest;
 import org.prebid.server.bidder.model.HttpResponse;
 import org.prebid.server.bidder.model.Result;
@@ -30,7 +30,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static java.util.Collections.singletonList;
 import static java.util.function.Function.identity;
@@ -308,7 +307,7 @@ public class OpenWebBidderTest extends VertxTest {
                         .device(Device.builder().ua("ua").ip("ip").ipv6("ipv6").build())
                         .imp(impCustomizers.stream()
                                 .map(OpenWebBidderTest::givenImp)
-                                .collect(Collectors.toList())))
+                                .toList()))
                 .build();
     }
 
@@ -344,7 +343,7 @@ public class OpenWebBidderTest extends VertxTest {
                         SeatBid.builder()
                                 .bid(Arrays.stream(bidCustomizers)
                                         .map(bidCustomizer -> bidCustomizer.apply(Bid.builder().id("123")).build())
-                                        .collect(Collectors.toList()))
+                                        .toList())
                                 .build()))
                 .build();
     }
